@@ -29,6 +29,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #17012: shutil.which() no longer fallbacks to the PATH environment
+  variable if empty path argument is specified.  Patch by Serhiy Storchaka.
+
 - Issue #17710: Fix pickle raising a SystemError on bogus input.
 
 - Issue #17341: Include the invalid name in the error messages from re about
